Updated small things

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ skills_title: Research Interests, Students, Teaching & Prospective Students
 prospective_students_title: Prospective Students
 
 # PROSPECTIVE STUDENTS SECTION
-show_prospective_students_card: true
+show_prospective_students_card: false
 prospective_students_title: Prospective Students
 
 # TIMELINE SECTION
