--- a/_data/skills-students.yml
+++ b/_data/skills-students.yml
@@ -1,3 +1,3 @@
 # List of supervised students
- - name: Oscar Davis (DPhil at Oxford), co-supervised with Michael Bronstein and Ismail Ceylan
+ - name: [Oscar Davis (DPhil at Oxford)](https://olsdavis.github.io/), co-supervised with Michael Bronstein and Ismail Ceylan
    weight: 1
