--- a/_data/skills-students.yml
+++ b/_data/skills-students.yml
@@ -1,3 +1,6 @@
 # List of supervised students
 # - name: Student Name
 #   weight: 1
+- name: Oscar Davis
+  weight: 1
+  url: https://olsdavis.github.io
