Updated text for Oscar supervision

--- a/_data/skills-students.yml
+++ b/_data/skills-students.yml
@@ -1,6 +1,6 @@
 # List of supervised students
 # - name: Student Name
 #   weight: 1
-- name: Oscar Davis
+- name: Oscar Davis (DPhil at Oxford) co-supervised with Michael Bronstein and Ismail Ceylan
   weight: 1
   url: https://olsdavis.github.io
